# sql_agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  example_queries.sql  generate_data.py  pyproject.toml  requirements.txt  setup.py
data/: ecommerce.db  schema.sql
docs/: AGENT_README.md  DATABASE.md
examples/: run_first_query.py
scripts/: demo.py  sql_chat.py  test.py
src/sql_agent/: __init__.py  sql_query_tool.py  text_to_sql_agent.py
