[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-agent"
version = "0.1.0"
description = "Natural Language to SQL Query Tool using Gemini API and Pydantic"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "SQL Agent Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Faker>=22.0.0",
    "pydantic>=2.10.5",
    "google-generativeai>=0.8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.scripts]
sql-chat = "scripts.sql_chat:main"
sql-demo = "scripts.demo:main"
sql-test = "scripts.test:main"

[project.urls]
Homepage = "https://github.com/yourusername/sql_agent"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
